Fix errors in javadoc generation